--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <h2>Testează algoritmii</h2>
             <p>Compilator cu AI</p>
             <button><a href="https://www.onlinegdb.com">începe</a></button>
+            <div class="main__img--container">
+                  <img src="images/pic3.jpg" alt="pic1" id="main__img">
+            </div>
         </div>
         <div class="services__card">
             <h2>Ești pregatit?</h2>
