--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <h2>Testează algoritmii</h2>
             <p>Compilator cu AI</p>
             <button><a href="https://www.onlinegdb.com">începe</a></button>
-            <div class="main__img--container">
-                  <img src="images/pic3.jpg" alt="pic1" id="main__img">
+            <div class="services__card">
+                  <img src="images/pic3.jpg" alt="pic1" id="services__card">
             </div>
         </div>
         <div class="services__card">
