--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar Section-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">T-INFO</a>
+            <a href="https://t3odorw.github.io/T-INFO/" id="navbar__logo">T-INFO</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -21,7 +21,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/index.html" class="navbar__links"> Acasă </a>
+                    <a href="https://t3odorw.github.io/T-INFO/" class="navbar__links"> Acasă </a>
                 </li>
                 <li class="navbar__item">
                     <a href="https://drive.google.com/drive/folders/1mwdXEseGJrQDRcWAWkcOE5aLRdoaJXUl?usp=sharing" class="navbar__links"> Algoritmi </a>
